src/objects/PMD_Product__c.object
<CustomObject>
    <fields>
        <fullName>Bluetooth_Chip_Version__c</fullName>
        <label>Bluetooth Chip Version</label>
        <picklist>
            <picklistValues>
                <fullName>B1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bluetooth_Profiles__c</fullName>
        <label>Bluetooth Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>A2DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVRCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAVDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bluetooth_Version__c</fullName>
        <label>Bluetooth Version</label>
        <picklist>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0+EDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0 WITHOUT EDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1+EDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 WITHOUT EDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0 + HS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0 WITHOUT HS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1+EDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0 LE+EDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 LE+EDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bluetooth__c</fullName>
        <label>Bluetooth Class</label>
        <picklist>
            <picklistValues>
                <fullName>Class 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 4.0 LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 4.1 LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>TEXT( Project_ID__r.Program_ID__r.Brand__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brew_Java_DoJa__c</fullName>
        <label>Brew/Java/DoJa</label>
        <picklist>
            <picklistValues>
                <fullName>BREW 1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 3.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 3.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREW 4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoJa 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoJa 2.5 LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoJa 4.0 LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoJa 4.0 OE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDP 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDP 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDP 2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoJava 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoJava 1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoJava 1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoJava 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoJava 2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoJava 2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Browser_Type__c</fullName>
        <label>Browser Type</label>
        <picklist>
            <picklistValues>
                <fullName>Access (WAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Netfront 3.5 (WAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML 5 Webkit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Konquerer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera (basic HTML) (WAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera (full HTML) (WAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera 8.5.1 (WAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera 8.6 (WAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera 9.x, HTML, WAP 2.0 (WAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera Mini v5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera Mini v6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OW 4.1 (WAP 1.2.1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OW 6.1 (WAP 2.0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OW 6.2 (WAP 2.0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OW 6.3 (WAP 2.0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OW 7 (WAP 2.0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pocket Internet Explorer (WAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAP 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebKit (No Flash)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebKit w/ Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebKit w/ Flash Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAMERA__c</fullName>
        <description>Layout Heading - not a real field</description>
        <label>* CAMERA: *</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDMA_Bands__c</fullName>
        <label>CDMA Bands</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDMA_Data_Protocols__c</fullName>
        <label>CDMA Data Protocols</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLI_Orientation__c</fullName>
        <description>Legacy</description>
        <label>CLI Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portrait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLI_Resolution__c</fullName>
        <description>Legacy</description>
        <label>CLI Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>120x160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128x108</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128x128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128x160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128x64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>176x220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240x320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>96x96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9x16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLI_Size__c</fullName>
        <description>Legacy</description>
        <label>CLI Size</label>
        <picklist>
            <picklistValues>
                <fullName>0.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.974</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.119</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.66</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLI_Type__c</fullName>
        <description>Legacy</description>
        <label>CLI Type</label>
        <picklist>
            <picklistValues>
                <fullName>256K TFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>260K TFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>262K TFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Color OLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4K CSTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56k CSTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65K CSTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65K TFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B / W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Color OLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grayscale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icons Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mono OLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMOLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QVGA TFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMF_Complexity__c</fullName>
        <description>Removed from layout on 12July13 as requested by Valerie Patinella</description>
        <label>CMF Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Known Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Technology (NUD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CONSUMER_USAGE__c</fullName>
        <description>Layout Heading - not a real field</description>
        <label>* CONSUMER USAGE: *</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Product_Liaison__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP Product Liaison</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Products  (PMD) (CP Product Liaison)</relationshipLabel>
        <relationshipName>Products_PMD1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXD_ID_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CXD ID Designer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Motorola_Core_Directory__c.DirectoryStatus__c</field>
                <operation>notEqual</operation>
                <value>D</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipName>Products_GPPD1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXD_MFT_Engineer_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CXD MFT Engineer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Motorola_Core_Directory__c.DirectoryStatus__c</field>
                <operation>notEqual</operation>
                <value>D</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipName>Products_GPPD2_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Camera_Content_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Camera Content Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier_Specs__c</fullName>
        <description>Legacy GPPD Field</description>
        <label>Carrier Specs</label>
        <picklist>
            <picklistValues>
                <fullName>AT&amp;T 1H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T 1H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T 1H12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T 2H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T 2H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T 2H12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T 3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cingular 2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cingular 2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cingular 2.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMCC V2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NII (Nextel International)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RONA Android 1H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RONA Android 1H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RONA Brewery 1H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RONA Brewery 1H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 1H12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 2H12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMO 1H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMO 1H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMO 2H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMO 2H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF R10 Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF R8 Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF R9 Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VZW Android 1H10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VZW Android 1H11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VZW Android 1H12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VZW Android 1H13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VZW Android 2009</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cloud_Services__c</fullName>
        <inlineHelpText>Mandatory field to enable &quot;Services and Application&quot; view in NPI</inlineHelpText>
        <label>Cloud Services</label>
        <picklist>
            <picklistValues>
                <fullName>Blur</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OTA Check-in Tablets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTA MMCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Color_Screen_Substantiation__c</fullName>
        <label>Color Screen Substantiation</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication_Technology_Content_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communication Technology Content Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Companion_Products__c</fullName>
        <label>Companion Products</label>
        <picklist>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changeable Backs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changeable Personalized Backs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Bands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Shells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covered Backs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip Shells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grip Shells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inductive Charging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leather Bands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resonant Charging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slice: Flux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slice: Juice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slice: Shield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Charging 15W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Charging 25W</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Connectivity_Features__c</fullName>
        <label>Connectivity Features</label>
        <picklist>
            <picklistValues>
                <fullName>BOTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handset Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motocast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motosync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moto Talk off-network PTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMA DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTA ActiveSync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over the Air Sync (OTA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consumer_Attributes__c</fullName>
        <label>Target Consumer Attributes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Usage_Content_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer Usage Content Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumer_Value_Proposition__c</fullName>
        <label>Consumer Value Proposition</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cubic_Size_in_cc__c</fullName>
        <label>Cubic Size (cc)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D1_Video_Capture_720x480_pixels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D1 Video Capture (720x480 pixels)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DESIGN_PERSONALIZATION__c</fullName>
        <description>Layout Heading - not a real field</description>
        <label>* DESIGN &amp; PERSONALIZATION: *</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISPLAY__c</fullName>
        <description>Layout label - not a real field</description>
        <label>* DISPLAY: *</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPL_Email__c</fullName>
        <label>DPL Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DP_Segment_Code_Description__c</fullName>
        <label>DP Segment Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_Segment_Code__c</fullName>
        <inlineHelpText>Demand Planner Segment Code is assigned by Supply Chain</inlineHelpText>
        <label>DP Segment Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRM_new__c</fullName>
        <description>Based on request from Peter Craun, for GTA</description>
        <inlineHelpText>Choose DRM, OS, and Output values</inlineHelpText>
        <label>DRM</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widevine DRM Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widevine DRM Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widevine DRM Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusted OS Discretix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusted OS G&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusted OS Oberthur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusted OS Qualcomm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusted OS Trusted Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusted Output - HDMI/HDCP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>